top whitespace fix

--- a/Website/WIP.css
+++ b/Website/WIP.css
@@ -4,6 +4,7 @@
     margin:0;
     padding:0;
     border: 0;
+    outline: 0;
     display: flex;
     justify-content: center;
     background-color: black;
